Add GET variation of /v1/generate
